# django-azure-metrics

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: build.yml
azure/: appi.bicep  main.bicep
azure_django/: asgi.py  settings.py  urls.py  wsgi.py
azure_tracer/: apps.py  serializers.py  views.py
